# Terracotta

./: .gitignore  404.html  Cargo.toml  README.md  build.rs  index.html
.github/.cargo/: config.toml
.github/workflows/: build.yaml  docs.yaml  docs.yml  gitee.yaml  pr-closed.yaml
ffi/: TerracottaAndroidAPI.java
search/: search_index.json
sites/: mkdocs.yml
sites/docs/: index.md
src/: code.rs  core.rs  easytier.rs  fakeserver.rs  lib.rs  lock_unix.rs  lock_windows.rs  logging.rs  main.rs  once_cell.rs  ports.rs  scanning.rs  server.rs  time.rs  ui_macos.rs
src/controller/: api.rs  mod.rs  states.rs
src/controller/rooms/: legacy.rs  mod.rs  pcl2ce.rs
src/controller/rooms/experimental/: mod.rs  protocols.rs  room.rs
src/controller/rooms/scaffolding/: mod.rs  protocols.rs  room.rs
src/easytier/: argument.rs  executable_impl.rs  linkage_impl.rs  mod.rs  publics.rs
src/mc/: fakeserver.rs  mod.rs  scanning.rs
src/scaffolding/: client.rs  mod.rs  profile.rs  server.rs
src/server/: mod.rs  states.rs  statics.rs  yggdrasils.rs
timestamp/: Cargo.toml
timestamp/src/: lib.rs
web/: _.html  font-awesome.css
