[package]
name = "terracotta"
version = "0.3.2"
edition = "2024"
build = "build.rs"

[package.metadata.easytier]
version = "v2.3.2"

[workspace.package]
version = "0.3.2"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
    "alloc",
] }
lazy_static = "1.5.0"
libc = "0.2.174"
local-ip-address = "0.6.5"
num-bigint = "0.4.6"
open = { version = "5.3.2", default-features = false }
rand_core = { version = "0.9.3", features = ["os_rng"] }
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
sevenz-rust2 = { version = "0.16.2", default-features = false, features = [
    "util",
] }
socket2 = "0.6.0"
winapi = { version = "0.3.9", default-features = false, features = [
    "winbase",
    "processenv",
    "sysinfoapi",
] }

[build-dependencies]
winresource = "0.1"
sevenz-rust2 = { version = "0.16.0", default-features = false, features = [
    "compress",
    "util",
] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls", "charset", "http2", "system-proxy", "blocking"
] }
zip = "4.3.0"
toml = "0.9.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]
resolver = "3"
members = ["build"]
