[package]
name = "terracotta"
version = "0.0.0-snapshot"
edition = "2024"
build = "build.rs"

[package.metadata.easytier]
version = "v2.4.5"

[workspace]
resolver = "3"
members = ["timestamp"]

[workspace.package]
version = "0.0.0-snapshot"

[dependencies]
cfg-if = "1.0.1"
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
    "alloc",
] }
lazy_static = "1.5.0"
libc = "0.2.174"
local-ip-address = "0.6.5"
native-dialog = "0.9.0"
num-bigint = "0.4.6"
open = { version = "5.3.2", default-features = false }
rand_core = { version = "0.9.3", features = ["os_rng"] }
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.141"
sevenz-rust2 = { version = "0.18.0", default-features = false, features = [
    "util",
] }
socket2 = "0.6.0"
winapi = { version = "0.3.9", default-features = false, features = ["winbase", "wincon", "handleapi", "processenv", "consoleapi", "sysinfoapi", "tlhelp32", "synchapi", "processthreadsapi", "minwindef"] }
reqwest = { version = "0.12.22", default-features = false, features = ["charset", "http2", "rustls-tls", "deflate", "blocking"]}
timestamp = { path = "timestamp" }
hex = "0.4.3"
rand_chacha = "0.9.0"
parking_lot = "0.12.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
objc2-web-kit = "0.3.1"

[build-dependencies]
winresource = "0.1"
sevenz-rust2 = { version = "0.18.0", default-features = false, features = [
    "compress",
    "util",
] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls", "charset", "http2", "system-proxy", "blocking", "zstd"
] }
zip = "4.3.0"
toml = "0.9.4"

[profile.dev]
panic = "abort"

[profile.dev-fast]
inherits = "dev"
debug = false
strip = "debuginfo"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

[profile.release.package."*"]
opt-level = "z"
strip = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-fast]
inherits = "release"
codegen-units = 64

[profile.release-fast.package."*"]
inherits = "release"
codegen-units = 64
